Novos comandos adicionados e pequenas correções

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "git": "^0.1.5",
     "googleapis": "^59.0.0",
     "nodemon": "^2.0.4",
+    "simple-youtube-api": "^5.2.1",
     "ytdl-core": "^3.2.2",
     "ytdl-core-discord": "^1.2.1"
   }
