--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Bot com diversas funções para o Discord ",
   "main": "index.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "index.js"
   },
