--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_PREFIX=&
 
-DISCORD_TOKEN=NzYxNjMxODE4NDQxMDMxNzIw.X3da5w.h_6UnIjlTMRu3CEMyFgwty0QNA8
+DISCORD_TOKEN=NzUxNjQwMTM0NTk1OTAzNTA4.X1MBbA.D2lvxyX2M00Uk0dbdqNYLs_Ny4E
 
 GOOGLE_TOKEN=AIzaSyAU7Z3XgIyQP58r6WZ5lrZIDX7_lXfb6WY
