--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "googleapis": "^59.0.0",
     "nodemon": "^2.0.5",
     "simple-youtube-api": "^5.2.1",
+    "yt-search": "^2.4.2",
     "ytdl-core": "^3.2.2",
-    "ytdl-core-discord": "^1.2.1"
+    "ytdl-core-discord": "^1.2.1",
+    "ytsr": "^1.0.4"
   }
 }
