Nome do bot alterado

--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   "homepage": "https://github.com/Joao-1/chika-bot#readme",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
-    "discord.js": "^12.3.1",
+    "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
     "git": "^0.1.5",
     "googleapis": "^59.0.0",
-    "nodemon": "^2.0.5",
+    "nodemon": "^2.0.6",
     "simple-youtube-api": "^5.2.1",
-    "yt-search": "^2.4.2",
-    "ytdl-core": "^3.2.2",
+    "yt-search": "^2.5.0",
+    "ytdl-core": "^3.4.2",
     "ytdl-core-discord": "^1.2.1",
-    "ytsr": "^1.0.4"
+    "ytpl": "git+https://github.com/dbrn/node-ytpl.git#patch-1",
+    "ytsr": "^2.0.0-alpha.3"
   }
 }
